--- a/index.html
+++ b/index.html
@@ -1,1 +1,75 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <script type="text/javascript" src="hammer.js"></script>
+  <title></title>
+</head>
+<body>
+
+<div id="word">
+
+</div>
+
+<div id="letters">
+</div>
+
+<script type="text/javascript">
+  var characters = ["a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m", "n", "o", "p", "q", "r", "s", "t", "u", "v", "w", "x", "y", "z"]
+  var index = 0
+  var letters = document.getElementById('letters')
+  var word = document.getElementById('word')
+  var hammertime = new Hammer(letters, {});
+  var string = ""
+
+  var currentCharacter = function(){
+    if(index < 0){
+      var selected = characters.length + index
+    } else{
+      var selected = index
+    }
+
+    return characters[selected].toUpperCase()
+  }
+
+  var changeCharacters = function(delta){
+    var newIndex = ((index + delta) % characters.length)
+    index = newIndex
+
+    letters.innerHTML = currentCharacter()
+  }
+
+  changeCharacters(0)
+
+  letters.innerHTML = characters[index]
+  hammertime.on('swipeleft', function(ev) {
+    changeCharacters(+1)
+  });
+
+  hammertime.on('swiperight', function(ev) {
+    changeCharacters(-1)
+  });
+
+  hammertime.on('tap', function(ev) {
+    if (ev.tapCount < 2){return}
+    string = string + currentCharacter()
+    word.innerHTML = string
+  })
+
+</script>
+
+<style type="text/css">
+  #letters{
+    height: 300px;
+    background: green;
+    font-size: 300px;
+    display: block;
+  }
+
+  #word{
+    height: 100px;
+    font-size: 100px;
+  }
+
+</style>
+</body>
+</html>
