lock to viewport height and width.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <script type="text/javascript" src="hammer.js"></script>
   <title></title>
+  <link rel="stylesheet" type="text/css" href="index.css" />
 </head>
 <body>
 
@@ -57,24 +58,5 @@
 
 </script>
 
-<style type="text/css">
-body{
-  text-transform: uppercase;
-}
-  #letters{
-    height: 1000px;
-    background: black;
-    color: white;
-    font-size: 1000px;
-    display: block;
-    font-weight: bold;
-  }
-
-  #word{
-    height: 120px;
-    font-size: 100px;
-  }
-
-</style>
 </body>
 </html>
