--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="apple-mobile-web-app-capable"
+          content="yes">
   <script type="text/javascript" src="hammer.js"></script>
   <title></title>
   <link rel="stylesheet" type="text/css" href="index.css" />
