--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta name="apple-mobile-web-app-capable"
           content="yes">
+   <meta name="apple-touch-fullscreen" content="yes">
+  <meta id="extViewportMeta" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
   <script type="text/javascript" src="hammer.js"></script>
   <title></title>
   <link rel="stylesheet" type="text/css" href="index.css" />
