--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
     word.innerHTML = string
   })
 
+  document.body.addEventListener('touchmove', function(event) {
+      console.log(event.source);
+      //if (event.source == document.body)
+        event.preventDefault();
+    }, false);
+
 </script>
 
 </body>
