--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="index.appcache">
 <head>
   <script type="text/javascript" src="hammer.js"></script>
   <title></title>
